config-root/namespaces/jx-staging/jx-demo-spring-01/jx-demo-spring-01-jx-demo-spring-01-deploy.yaml
# Source: jx-demo-spring-01/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-demo-spring-01-jx-demo-spring-01
  labels:
    draft: draft-app
    chart: "jx-demo-spring-01-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx-demo-spring-01-jx-demo-spring-01
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-demo-spring-01-jx-demo-spring-01
    spec:
      serviceAccountName: jx-demo-spring-01-jx-demo-spring-01
      containers:
        - name: jx-demo-spring-01
          image: "gcr.io/complexica-demo/jx-demo-spring-01:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
