config-root/namespaces/jx-staging/jx-demo-spring-01/jx-demo-spring-01-svc.yaml
# Source: jx-demo-spring-01/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx-demo-spring-01
  labels:
    chart: "jx-demo-spring-01-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx-demo-spring-01-jx-demo-spring-01
