config-root/namespaces/jx-staging/jx-demo-spring-01/jx-demo-spring-01-ingress.yaml
# Source: jx-demo-spring-01/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jx-demo-spring-01
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jx-demo-spring-01
              servicePort: 80
      host: jx-demo-spring-01-jx-staging.34.116.90.205.nip.io
